# cmake-make_test

./: README.md
task1/: Makefile  header.h  main.c  result  three.c  two.c
task2/: Makefile  main
task2/include/: header.h
task2/src/: can_driver.c  can_init.c  main.c
task3/: CMakeLists.txt  hello-world.c
task4/: CMakeLists.txt  hello-world.c  message.c  message.h
task5/: CMakeLists.txt
